Fix sidebar hamburger tab being hidden behind other elements

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -28,6 +28,7 @@
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    z-index: 10000;
 }
 
 /* Show sidebar button */
